tests/resource/invalid/type/definition/function_ret_not_super.mamba
def some_higher_order(fun: Int -> Int) -> Int? => fun(10)
def fancy(self) -> Int => some_higher_order(\x: Int => x * 2)
